--- a/config/mongoid.yml
+++ b/config/mongoid.yml
@@ -49,3 +49,7 @@ development:
 
     # Ensure all times are UTC in the app side. (default: false)
     # use_utc: false
+production:
+  sessions:
+    default:
+      database: trombinocapoeira_production
